# adaptive_landing_gear_esp

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  imu.cpp  landing_gear.cpp  main.cpp  process_ADC.cpp
main/include/: filters.h  headers.h  pca9548a.h  pid.h  servo.h
main/src/: lidar.cpp  pca9548a.cpp  pid.cpp  servo.cpp
scripts/: ani.py  get_log.py  log_server.py  plot.ipynb  plot_log.py
scripts/data/: Tue Jun 11 16:43:53 2024.txt  Tue Jun 11 16:43:53 2024_LOG_ADC.csv  Tue Jun 11 16:43:53 2024_LOG_FK.csv  Tue Jun 11 16:43:53 2024_LOG_IMU.csv  Tue Jun 11 16:43:53 2024_LOG_LIDAR.csv  Tue Jun 11 16:43:53 2024_LOG_PID.csv  Tue Jun 11 16:43:53 2024_LOG_RAW_ADC.csv  Tue Jun 11 16:43:53 2024_LOG_SERVO.csv  Tue Jun 11 16:43:53 2024_LOG_STATE.csv  Tue Jun 11 16:48:23 2024.txt  Tue Jun 11 16:48:23 2024_LOG_ADC.csv  Tue Jun 11 16:48:23 2024_LOG_FK.csv  Tue Jun 11 16:48:23 2024_LOG_IMU.csv  Tue Jun 11 16:48:23 2024_LOG_LIDAR.csv  Tue Jun 11 16:48:23 2024_LOG_PID.csv  Tue Jun 11 16:48:23 2024_LOG_RAW_ADC.csv  Tue Jun 11 16:48:23 2024_LOG_SERVO.csv  Tue Jun 11 16:48:23 2024_LOG_STATE.csv  Tue Jun 11 16:51:17 2024.txt  Tue Jun 11 16:51:17 2024_LOG_ADC.csv  Tue Jun 11 16:51:17 2024_LOG_FK.csv  Tue Jun 11 16:51:17 2024_LOG_IMU.csv  Tue Jun 11 16:51:17 2024_LOG_LIDAR.csv  Tue Jun 11 16:51:17 2024_LOG_PID.csv  Tue Jun 11 16:51:17 2024_LOG_RAW_ADC.csv  Tue Jun 11 16:51:17 2024_LOG_SERVO.csv  Tue Jun 11 16:51:17 2024_LOG_STATE.csv  Tue Jun 11 16:55:03 2024.txt  (+278 more)
